; ModuleID = '/home/carl/AnghaBench/reactos/drivers/bus/acpi/acpica/executer/extr_exconfig.c_AcpiExRegionRead.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/bus/acpi/acpica/executer/extr_exconfig.c_AcpiExRegionRead.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ACPI_READ = common dso_local global i32 0, align 4
@AE_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i64, i64*)* @AcpiExRegionRead to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @AcpiExRegionRead(i32* %0, i64 %1, i64* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64* %2, i64** %7, align 8
  store i64 0, i64* %10, align 8
  store i64 0, i64* %11, align 8
  br label %12

12:                                               ; preds = %33, %3
  %13 = load i64, i64* %11, align 8
  %14 = load i64, i64* %6, align 8
  %15 = icmp slt i64 %13, %14
  br i1 %15, label %16, label %36

16:                                               ; preds = %12
  %17 = load i32*, i32** %5, align 8
  %18 = load i32, i32* @ACPI_READ, align 4
  %19 = load i64, i64* %10, align 8
  %20 = call i32 @AcpiEvAddressSpaceDispatch(i32* %17, i32* null, i32 %18, i64 %19, i32 8, i64* %9)
  store i32 %20, i32* %8, align 4
  %21 = load i32, i32* %8, align 4
  %22 = call i64 @ACPI_FAILURE(i32 %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %26

24:                                               ; preds = %16
  %25 = load i32, i32* %8, align 4
  store i32 %25, i32* %4, align 4
  br label %38

26:                                               ; preds = %16
  %27 = load i64, i64* %9, align 8
  %28 = load i64*, i64** %7, align 8
  store i64 %27, i64* %28, align 8
  %29 = load i64*, i64** %7, align 8
  %30 = getelementptr inbounds i64, i64* %29, i32 1
  store i64* %30, i64** %7, align 8
  %31 = load i64, i64* %10, align 8
  %32 = add nsw i64 %31, 1
  store i64 %32, i64* %10, align 8
  br label %33

33:                                               ; preds = %26
  %34 = load i64, i64* %11, align 8
  %35 = add nsw i64 %34, 1
  store i64 %35, i64* %11, align 8
  br label %12

36:                                               ; preds = %12
  %37 = load i32, i32* @AE_OK, align 4
  store i32 %37, i32* %4, align 4
  br label %38

38:                                               ; preds = %36, %24
  %39 = load i32, i32* %4, align 4
  ret i32 %39
}

declare dso_local i32 @AcpiEvAddressSpaceDispatch(i32*, i32*, i32, i64, i32, i64*) #1

declare dso_local i64 @ACPI_FAILURE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
